[package]
name = "ar"
edition = "2021"
version = "0.9.0"
authors = ["Matthew D. Steele <mdsteele@alum.mit.edu>"]
description = "A library for encoding/decoding Unix archive files."
repository = "https://github.com/mdsteele/rust-ar"
keywords = ["ar", "archive", "deb"]
license = "MIT"
readme = "README.md"

[dependencies]
futures-io = "0.3"
futures-lite = "1.13"
